refactor: change calculation method for isAvailable field